tdf#70236 propertly recognise full Access 2007 URL

Change-Id: If1f4986cfffada6a6ab507296a54589bdd5404ff