dbaccess/source/core/misc/dsntypes.cxx
@@ -361,7 +361,7 @@ DATASOURCE_TYPE ODsnTypeCollection::determineType(const OUString& _rDsn) const
     {
         if (sDsn.startsWithIgnoreAsciiCase("sdbc:ado:access"))
         {
-            if (sDsn.equalsIgnoreAsciiCase("sdbc:ado:access:Provider=Microsoft.ACE.OLEDB.12.0;"))
+            if (sDsn.startsWithIgnoreAsciiCase("sdbc:ado:access:Provider=Microsoft.ACE.OLEDB.12.0;"))
                 return DST_MSACCESS_2007;
             else
                 return DST_MSACCESS;
